updated openshift env variables

--- a/public/client/view/prooda/prooda-main.view.html
+++ b/public/client/view/prooda/prooda-main.view.html
@@ -11,7 +11,7 @@
 
     <div class="container-fluid" style="background-color: white">
 
-    <table class="table-responsive table-striped" style="width: 100%">
+    <table class="table-responsive table-striped prooda-table" style="width: 100%">
         <thead>
             <td class="col-xs-6 col-sm-6 col-md-6">Article Title By Rank</td>
             <td class="col-xs-6 col-sm-6 col-md-6">Article Link</td>
