--- a/public/client/view/sidebar/sidebar.view.html
+++ b/public/client/view/sidebar/sidebar.view.html
@@ -6,13 +6,14 @@
 </head>
 <body>
 <nav id="sidebar" ng-controller="SidebarController">
-    <div >
-        <ul class="nav nav-tabs nav-stacked">
+    <div>
+        <ul class="nav nav-tabs nav-stacked ">
             <li role="tab-group" ng-class="{'active' : $location.url() == '#/prooda-main'}">
                 <a href="#/prooda-main">Hacker News</a>
             </li>
             <li role="tab-group" ng-class="{'active' : $location.url() == '#/prooda-fooda'}">
                 <a href="#/prooda-fooda">Fooda</a></li>
+            <li class="'active'"><a>look at me Im mr meeseeks!</a></li>
         </ul>
     </div>
 </nav>
